--- a/README
+++ b/README
@@ -2,3 +2,12 @@ stackoverflow-dump
 ==================
 
 This repo contains utilities to deal with gathering, cleaning and loading of stackoverflow data
+
+About the data
+
+=> License: CC-BY-SA 3.0
+
+=> Useful links
+
+- Download links available from here: https://archive.org/download/stackexchange
+- Data documentation can be found: https://meta.stackexchange.com/questions/2677/database-schema-documentation-for-the-public-data-dump-and-sede
